feat: Cell elements and assigned colors

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,20 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
+
         <title>Document</title>
     </head>
     <body>
-        hi
+        <header class="header-container">
+            <h1>Battleship</h1>
+        </header>
+        <div class="container">
+            <div class="player1-board player-board"></div>
+            <div class="player2-board player-board"></div>
+        </div>
     </body>
 </html>
