feat: added placing ships and reset functionality

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,14 @@
             <h1>Battleship</h1>
         </header>
         <div class="container">
-            <div class="player1-board player-board"></div>
-            <div class="player2-board player-board"></div>
+            <div class="board-container">
+                <h2>Defend</h2>
+                <div class="player1-board player-board"></div>
+            </div>
+            <div class="board-container">
+                <h2>Attack</h2>
+                <div class="player2-board player-board"></div>
+            </div>
         </div>
     </body>
 </html>
