--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
         <header class="header-container">
             <h1>Battleship</h1>
         </header>
+        <div class="info-container"><div class="info">Click to place the 5-length ship</div></div>
         <div class="container">
             <div class="board-container">
                 <h2>Defend</h2>
